[package]
publish =     false
name =        "utilities"
description = "Sample (example), basic async code with tokio."

version =     {workspace=true}
edition =     {workspace=true}
authors =     {workspace=true}
categories  = {workspace=true}
keywords =    {workspace=true}

[lints]
workspace = true

[dependencies]
dotenvy = "0.15"
bon = "3"

thiserror =  {workspace=true}

tracing =            { workspace = true }  # "release_max_level_warn"^"release_max_level_off"
tracing-appender =   { workspace = true }
tracing-error =      { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] } # "env-filter","json"

[dev-dependencies]
insta = "1"

pretty_assertions = {workspace=true}
test-log =          {workspace=true}
quickcheck =        {workspace=true}
quickcheck_macros = {workspace=true}
# expect-test =       {workspace=true}
